<resources>
    <string name="app_name">Registration</string>
    <string name="frm_name">Name</string>
    <string name="register">Fill in this form to register as user</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="terms">I have read and agree the terms</string>
    <string name="btnset">Set Language</string>
</resources>
